# udacity_robotics_sw_engineer

./: README.md
1-introduction_to_robotics/: concepts.md
2-gazebo_world/: concepts.md
2-gazebo_world/myrobot/: README.md
2-gazebo_world/project/: build_my_world.md
2-gazebo_world/project/build_my_world/: README.md
2-gazebo_world/project/build_my_world/model/Building/: model.sdf
2-gazebo_world/project1/: build_my_world.md
2-gazebo_world/project1/build_my_world/: README.md
2-gazebo_world/project1/build_my_world/model/MobileBaseRobot/: model.sdf
2-gazebo_world/project1/build_my_world/script/: welcome_message.cpp
2-gazebo_world/project1/build_my_world/world/: UdacityOffice.world
3-ros_essentials/: concepts.md
3-ros_essentials/catkin_ws/src/: CMakeLists.txt
3-ros_essentials/catkin_ws/src/ball_chaser/: CMakeLists.txt  README.md  package.xml
3-ros_essentials/catkin_ws/src/ball_chaser/launch/: ball_chaser.launch  drive_bot.launch
3-ros_essentials/catkin_ws/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
3-ros_essentials/catkin_ws/src/first_packgage/: CMakeLists.txt  package.xml
3-ros_essentials/catkin_ws/src/my_robot/: README.md
3-ros_essentials/catkin_ws/src/my_robot/launch/: robot_description.launch  world.launch
3-ros_essentials/catkin_ws/src/my_robot/urdf/: my_robot.xacro
3-ros_essentials/catkin_ws/src/my_robot/worlds/: ballUdacityOffice.world  empty.world
3-ros_essentials/catkin_ws/src/simple_arm/: CMakeLists.txt  package.xml
3-ros_essentials/catkin_ws/src/simple_arm/launch/: robot_spawn.launch  robot_spawn_look_away.launch
3-ros_essentials/catkin_ws/src/simple_arm/src/: arm_mover.cpp  look_away.cpp  simple_mover.cpp
3-ros_essentials/catkin_ws/src/simple_arm/srv/: GoToPosition.srv
3-ros_essentials/project/: go_chase_it.md
3-ros_essentials/project2/: README.md  go_chase_it.md
3-ros_essentials/project2/go_chase_it/src/ball_chaser/: package.xml
3-ros_essentials/project2/go_chase_it/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
3-ros_essentials/project2/go_chase_it/src/my_robot/launch/: world.launch
4-localization/: concepts.md
4-localization/catkin_ws/src/: EKFLab.rviz  RvizLaunch.launch  rqt_multiplot.xml
4-localization/catkin_ws/src/RoboND-MCL-Lab/: app  main.cpp
4-localization/catkin_ws/src/main/: package.xml
4-localization/catkin_ws/src/main/launch/: main.launch
4-localization/catkin_ws/src/robot_pose_ekf/: robot_pose_ekf.launch
4-localization/project4/: README.md  where_am_i.md
4-localization/project4/where_am_i/src/my_robot/: package.xml
4-localization/project4/where_am_i/src/my_robot/config/: global_costmap_params.yaml
4-localization/project4/where_am_i/src/my_robot/launch/: amcl.launch
4-localization/project4/where_am_i/src/my_robot/rviz/: amcl.rviz
4-localization/project4/where_am_i/src/my_robot/urdf/: my_robot.xacro
4-localization/project4/where_am_i/src/pgm_map_creator/src/: collision_map_creator.cc
4-localization/project4/where_am_i/src/pgm_map_creator/world/: ballUdacityOffice.world
5-mapping_and_slam/: concepts.md
5-mapping_and_slam/catkin_ws/src/RoboND-OccupancyGridMappingAlgorithm/: app  main.cpp
5-mapping_and_slam/project5/: README.md  map_my_world.md
5-mapping_and_slam/project5/map_my_world/src/my_robot/launch/: amcl.launch  localization.launch  mapping.launch  teleop.launch
5-mapping_and_slam/project5/map_my_world/src/my_robot/rviz/: amcl.rviz
5-mapping_and_slam/project5/map_my_world/src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
6-path_planning_and_navigation/: concepts.md
6-path_planning_and_navigation/catkin_ws/src/: README.md
6-path_planning_and_navigation/project6/: home_service_robot.md
6-path_planning_and_navigation/project6/home_service_robot/: README.md
6-path_planning_and_navigation/project6/home_service_robot/src/add_markers/: CMakeLists.txt  package.xml
6-path_planning_and_navigation/project6/home_service_robot/src/add_markers/src/: add_markers.cpp  home_service.cpp
6-path_planning_and_navigation/project6/home_service_robot/src/map/: map.pgm
6-path_planning_and_navigation/project6/home_service_robot/src/pick_objects/: CMakeLists.txt  package.xml
6-path_planning_and_navigation/project6/home_service_robot/src/pick_objects/src/: pick_objects.cpp
6-path_planning_and_navigation/project6/home_service_robot/src/scripts/: add_marker.sh  home_service.sh  launch.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
6-path_planning_and_navigation/project6/home_service_robot/src/turtlebot3/turtlebot3_navigation/launch/: turtlebot3_navigation.launch
myrobot/model/mybuilding/: model.sdf
myrobot/robot/: model.sdf
myrobot/world/: myworld
(+2 files in other folders)
